--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,1 +1,5 @@
-{{words}}
+<section class="content-header">
+    <ol class="breadcrumb">
+        <li><a href="#/"><i class="fa fa-home"></i> 首页</a></li>
+    </ol>
+</section>
