用户管理bug修改

--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -8,6 +8,10 @@
                 width: 80%;
                 height: 390px;
             }
+            .ngGridMaxPagesNumber {
+                display: inline-block;
+                margin-top: -10px;
+            }
         </style>
     </head>
     <body>
