用户角色设置

--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -26,6 +26,7 @@
             <button type="button" class="btn btn-default" ng-click="insert()">新增</button>
             <button type="button" class="btn btn-default" ng-click="update()">修改</button>
             <button type="button" class="btn btn-default" ng-click="delete()">删除</button>
+            <button type="button" class="btn btn-default" ng-click="roleSetting()">角色</button>
         </div>
 
         <div class="gridStyle" ng-grid="gridOptions"></div>
