用户角色设置

--- a/app/templates/user/user.html
+++ b/app/templates/user/user.html
@@ -17,7 +17,7 @@
     <body>
         <section class="content-header">
             <ol class="breadcrumb">
-                <li><a href="#/"><i class="fa fa-home"></i> 首页</a></li>
+                <li><a href="#/"><i class="fa fa-cogs"></i> 系统设置</a></li>
                 <li class="active"><i class="fa fa-user"></i> 用户</li>
             </ol>
         </section>
