--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,5 +1,5 @@
 <section class="content-header">
     <ol class="breadcrumb">
-        <li><a href="#/"><i class="fa fa-home"></i> 首页</a></li>
+        <li><a href=""><i class="fa fa-home"></i> 首页</a></li>
     </ol>
 </section>
