--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,6 +1,5 @@
 <section class="content-header">
     <ol class="breadcrumb">
-        <li><a href="#/"><i class="fa fa-home"></i> 首页</a></li>
-        <li class="active"><i class="fa fa-tag"></i> 关于</li>
+        <li><a href=""><i class="fa fa-tag"></i> 关于</a></li>
     </ol>
 </section>
