--- a/app/templates/user/roleSetting.html
+++ b/app/templates/user/roleSetting.html
@@ -9,7 +9,14 @@
                 <div class="modal-title">设置角色</div>
             </div>
             <div class="modal-body">
-                
+                <div class='container'>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <input type="checkbox" id="all" ng-model="all" ng-click="selectAll()">
+                            <label for="all" style="cursor: pointer; margin-left: 5px;">全选</label>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-primary" ng-click="ok()">保存</button>
