--- a/app/templates/user/roleSetting.html
+++ b/app/templates/user/roleSetting.html
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-md-3">
                             <input type="checkbox" id="all" ng-model="all" ng-click="selectAll()">
-                            <label for="all" style="cursor: pointer; margin-left: 5px;">全选</label>
+                            <label for="all" style="cursor: pointer;">全选</label>
                         </div>
                     </div>
                 </div>
